--- a/EvanAlmighty/EvanAlmighty.csproj
+++ b/EvanAlmighty/EvanAlmighty.csproj
@@ -5,4 +5,10 @@
   </PropertyGroup>
 
 
+  <ItemGroup>
+    <None Remove="Newtonsoft.Json" />
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.2" />
+  </ItemGroup>
 </Project>
