--- a/EvanAlmighty/Properties/launchSettings.json
+++ b/EvanAlmighty/Properties/launchSettings.json
@@ -20,8 +20,8 @@
     "EvanAlmighty": {
       "commandName": "Project",
       "launchBrowser": true,
-      "launchUrl": "weatherforecast",
-      "applicationUrl": "https://localhost:5001;http://localhost:5000",
+      "launchUrl": "GenerateGalaxy?starNumber=1",
+      "applicationUrl": "http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
